# comfygen

./: README.md  __init__.py  comfygen.py  pyproject.toml
web/: README.md  index.html
web/css/: comfygen.css
web/js/: advanced_workflow.json  app.js  base_workflow.json
